--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,7 @@ dd {
 
 /* Input */
 .input {
+  position: relative;
   border-radius: 2rem;
   padding: 0.8rem 11rem;
   border: 1px solid lightgray;
@@ -62,6 +63,32 @@ dd {
 
 .input:focus {
   outline: none;
+}
+
+.drop-input {
+  display: none;
+  max-height: 29.5rem;
+  position: absolute;
+  background: #fff;
+  width: 32rem;
+  border-radius: 1rem;
+  margin-top: 2rem;
+  overflow: hidden;
+}
+.drop-input-active {
+  max-height: 29.5rem;
+  position: absolute;
+  background: #fff;
+  width: 32rem;
+  border-radius: 1rem;
+  margin-top: 2rem;
+  overflow: hidden;
+}
+
+.input-drop-list {
+  padding: 1rem 0;
+  border-bottom: 1px solid gray;
+  height: 100%;
 }
 
 .services {
