--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,7 @@ dd {
 }
 .drop-input-active {
   max-height: 29.5rem;
+  min-height: 20rem;
   position: absolute;
   background: #fff;
   width: 32rem;
@@ -85,10 +86,65 @@ dd {
   overflow: hidden;
 }
 
-.input-drop-list {
+.input-drop-list1 {
+  margin: 1rem 0;
   padding: 1rem 0;
-  border-bottom: 1px solid gray;
   height: 100%;
+  cursor: pointer;
+}
+.input-drop-list2 {
+  margin: 1rem 0;
+  padding: 1rem 0;
+  height: 100%;
+  cursor: pointer;
+}
+
+.input-drop-list1:hover {
+  background-color: #f0f0f0;
+  height: 100%;
+  cursor: pointer;
+  /* width: 15rem; */
+}
+.input-drop-list2:hover {
+  background-color: #f0f0f0;
+  height: 100%;
+  cursor: pointer;
+  width: 15rem;
+}
+
+.side-list {
+  display: none;
+  position: absolute;
+  left: 15rem;
+  top: 1rem;
+  height: 18rem;
+  width: 16rem;
+  border: 2px solid #f0f0f0;
+  border-radius: 1rem;
+}
+.side-list-active {
+  position: absolute;
+  left: 15rem;
+  top: 1rem;
+  height: 18rem;
+  width: 16rem;
+  border: 2px solid #f0f0f0;
+  border-radius: 1rem;
+}
+
+.side-list-items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 2rem;
+}
+
+.side-list-item-piece {
+  padding: 0.5rem 0 1rem 0;
+  font-size: 10px;
+}
+.side-list-item-piece > hr {
 }
 
 .services {
@@ -205,7 +261,7 @@ dd {
   list-style: none;
   background: #fff;
   padding: 0 2rem;
-  left: 37rem;
+  left: 25rem;
   margin-top: 1.5rem;
   margin-right: 5rem;
   border-radius: 1rem;
